--- a/index.html
+++ b/index.html
@@ -128,9 +128,12 @@
                 <img src="Logo.png" alt="Social SEO Logo" class="h-8 w-8 object-contain">
                 <span class="font-bold text-xl text-white">Social SEO</span>
             </div>
-            <a href="#content-plan" class="btn-primary text-white font-semibold py-2 px-5 rounded-lg text-sm">
-                See The Plan
-            </a>
+            <div class="flex items-center space-x-4">
+                <a href="ai-rap-guide.html" class="text-gray-300 hover:text-white text-sm">AI Rap Guide</a>
+                <a href="#content-plan" class="btn-primary text-white font-semibold py-2 px-5 rounded-lg text-sm">
+                    See The Plan
+                </a>
+            </div>
         </nav>
     </header>
 
