chore: move ai rap guide to folder

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <span class="font-bold text-xl text-white">Social SEO</span>
             </div>
             <div class="flex items-center space-x-4">
-                <a href="ai-rap-guide.html" class="text-gray-300 hover:text-white text-sm">AI Rap Guide</a>
+                <a href="/ai-rap-guide/" class="text-gray-300 hover:text-white text-sm">AI Rap Guide</a>
                 <a href="#content-plan" class="btn-primary text-white font-semibold py-2 px-5 rounded-lg text-sm">
                     See The Plan
                 </a>
