Add Avatar Guide onboarding subpage

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             </div>
             <div class="flex items-center space-x-4">
                 <a href="guide2/" class="text-gray-300 hover:text-white text-sm">AI Rap Guide</a>
+                <a href="avatar-guide/" class="text-gray-300 hover:text-white text-sm">Avatar Guide</a>
                 <a href="#content-plan" class="btn-primary text-white font-semibold py-2 px-5 rounded-lg text-sm">
                     See The Plan
                 </a>
