--- a/avatar-guide/index.html
+++ b/avatar-guide/index.html
@@ -163,24 +163,19 @@
           const prompt = `Based on the provided guide, answer the user's question. The question is: "${input}"`;
 
           try {
-            const apiKey = "";
-            const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
-
-            const payload = {
-              contents: [{ role: "user", parts: [{ text: prompt }] }],
-              systemInstruction: {
-                parts: [{ text: systemPrompt }]
-              }
-            };
-
-            const response = await fetch(apiUrl, {
+            const response = await fetch("/api/gemini", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
-              body: JSON.stringify(payload)
+              body: JSON.stringify({ prompt, systemPrompt })
             });
 
             const result = await response.json();
-            const botMessage = result?.candidates?.[0]?.content?.parts?.[0]?.text;
+
+            if (!response.ok) {
+              throw new Error(result?.error || "Gemini API request failed");
+            }
+
+            const botMessage = result?.text;
 
             if (botMessage) {
               setMessages((prev) => [...prev, { sender: "bot", text: botMessage }]);
@@ -199,7 +194,10 @@
               ...prev,
               {
                 sender: "bot",
-                text: "Sorry, I am having trouble connecting right now. Please try again later."
+                text:
+                  error instanceof Error && error.message
+                    ? `Sorry, I ran into an issue: ${error.message}`
+                    : "Sorry, I am having trouble connecting right now. Please try again later."
               }
             ]);
           } finally {
